--- a/opencda/scenario_testing/config_yaml/config_yaml/ms_van3t_platooning_4lane_intruder.yaml
+++ b/opencda/scenario_testing/config_yaml/config_yaml/ms_van3t_platooning_4lane_intruder.yaml
@@ -1,73 +1,71 @@
-#carla_traffic_manager:
-#  global_distance: 4.0
-#  global_speed_perc: -50
-#  ignore_lights_percentage: 0
-#  vehicle_list:
-#  - spawn_position:
-#    - -403
-#    - 30
-#    - 0.3
-#    - 0
-#    - 0
-#    - 0
-#    vehicle_speed_perc: -200
-#  - spawn_position:
-#    - -417
-#    - 30
-#    - 0.3
-#    - 0
-#    - 0
-#    - 0
-#    vehicle_speed_perc: -200
-#  - spawn_position:
-#    - -380
-#    - 30
-#    - 0.3
-#    - 0
-#    - 0
-#    - 0
-#    vehicle_speed_perc: -200
-#  - spawn_position:
-#    - -365
-#    - 30
-#    - 0.3
-#    - 0
-#    - 0
-#    - 0
-#    vehicle_speed_perc: -200
-#  - spawn_position:
-#    - -350
-#    - 30
-#    - 0.3
-#    - 0
-#    - 0
-#    - 0
-#    vehicle_speed_perc: -200
-#  - spawn_position:
-#    - -380
-#    - 34
-#    - 0.3
-#    - 0
-#    - 0
-#    - 0
-#    vehicle_speed_perc: -200
-#  - spawn_position:
-#    - -350
-#    - 34
-#    - 0.3
-#    - 0
-#    - 0
-#    - 0
-#    vehicle_speed_perc: -200
-#  - spawn_position:
-#    - -400
-#    - 27
-#    - 0.3
-#    - 0
-#    - 0
-#    - 0
-#    vehicle_speed_perc: -200
 
+carla_traffic_manager:
+  global_distance: 10.0 # the minimum distance in meters that vehicles have to keep with the rest
+  global_speed_perc: -200
+  vehicle_list:
+    - spawn_position: [524.7, 9.0, 0.3, 0, 0, 0]
+    - spawn_position: [454.3, 9.0, 0.3, 0, 0, 0]
+    - spawn_position: [451.3, 5.5, 0.3, 0, 0, 0]
+    - spawn_position: [397.4, 5.5, 0.3, 0, 0, 0]
+    - spawn_position: [371.8, 1.5, 0.3, 0, 0, 0]
+    - spawn_position: [362.8, 5.5, 0.3, 0, 0, 0]
+    - spawn_position: [567.7, 5.5, 0.3, 0, 0, 0]
+    - spawn_position: [312.0, 1.5, 0.3, 0, 0, 0]
+    - spawn_position: [398.8, 1.5, 0.3, 0, 0, 0]
+    - spawn_position: [360.9, 1.5, 0.3, 0, 0, 0]
+    - spawn_position: [545.2, 5.5, 0.3, 0, 0, 0]
+    - spawn_position: [577.8, 9.0, 0.3, 0, 0, 0]
+    - spawn_position: [410.9, 1.5, 0.3, 0, 0, 0]
+    - spawn_position: [309.8, 9.0, 0.3, 0, 0, 0]
+    - spawn_position: [401.7, 9.0, 0.3, 0, 0, 0]
+    - spawn_position: [328.5, 1.5, 0.3, 0, 0, 0]
+    - spawn_position: [348.9, 1.5, 0.3, 0, 0, 0]
+    - spawn_position: [462.5, 1.5, 0.3, 0, 0, 0]
+    - spawn_position: [330.1, 5.5, 0.3, 0, 0, 0]
+    - spawn_position: [413.3, 5.5, 0.3, 0, 0, 0]
+    - spawn_position: [490.2, 5.5, 0.3, 0, 0, 0]
+    - spawn_position: [477.3, 9.0, 0.3, 0, 0, 0]
+    - spawn_position: [513.3, 1.5, 0.3, 0, 0, 0]
+    - spawn_position: [578.6, 1.5, 0.3, 0, 0, 0]
+    - spawn_position: [494.8, 9.0, 0.3, 0, 0, 0]
+    - spawn_position: [374.9, 9.0, 0.3, 0, 0, 0]
+    - spawn_position: [510.6, 5.5, 0.3, 0, 0, 0]
+    - spawn_position: [338.1, 9.0, 0.3, 0, 0, 0]
+    - spawn_position: [340.9, 5.5, 0.3, 0, 0, 0]
+    - spawn_position: [353.6, 9.0, 0.3, 0, 0, 0]
+    - spawn_position: [319.9, 5.5, 0.3, 0, 0, 0]
+    - spawn_position: [437.8, 5.5, 0.3, 0, 0, 0]
+    - spawn_position: [590.7, 9.0, 0.3, 0, 0, 0]
+    - spawn_position: [463.7, 5.5, 0.3, 0, 0, 0]
+    - spawn_position: [464.7, 9.0, 0.3, 0, 0, 0]
+    - spawn_position: [497.8, 1.5, 0.3, 0, 0, 0]
+    - spawn_position: [531.4, 1.5, 0.3, 0, 0, 0]
+    - spawn_position: [537.4, 9.0, 0.3, 0, 0, 0]
+    - spawn_position: [598.3, 1.5, 0.3, 0, 0, 0]
+    - spawn_position: [531.7, 5.5, 0.3, 0, 0, 0]
+    - spawn_position: [383.0, 1.5, 0.3, 0, 0, 0]
+    - spawn_position: [373.3, 5.5, 0.3, 0, 0, 0]
+    - spawn_position: [567.7, 9.0, 0.3, 0, 0, 0]
+    - spawn_position: [560.0, 1.5, 0.3, 0, 0, 0]
+    - spawn_position: [552.5, 9.0, 0.3, 0, 0, 0]
+    - spawn_position: [557.0, 5.5, 0.3, 0, 0, 0]
+    - spawn_position: [481.1, 1.5, 0.3, 0, 0, 0]
+    - spawn_position: [307.9, 5.5, 0.3, 0, 0, 0]
+    - spawn_position: [421.9, 9.0, 0.3, 0, 0, 0]
+    - spawn_position: [578.0, 5.5, 0.3, 0, 0, 0]
+    - spawn_position: [429.9, 1.5, 0.3, 0, 0, 0]
+    - spawn_position: [589.0, 5.5, 0.3, 0, 0, 0]
+    - spawn_position: [322.9, 9.0, 0.3, 0, 0, 0]
+    - spawn_position: [506.0, 9.0, 0.3, 0, 0, 0]
+    - spawn_position: [447.3, 1.5, 0.3, 0, 0, 0]
+    - spawn_position: [599.9, 5.5, 0.3, 0, 0, 0]
+    - spawn_position: [385.6, 5.5, 0.3, 0, 0, 0]
+    - spawn_position: [352.5, 5.5, 0.3, 0, 0, 0]
+    - spawn_position: [549.4, 1.5, 0.3, 0, 0, 0]
+    - spawn_position: [477.8, 5.5, 0.3, 0, 0, 0]
+
+
+# First define the basic parameters of the vehicles
 vehicle_base:
   sensing:
     perception:
@@ -82,7 +80,7 @@ vehicle_base:
           - [ 0.0, -0.3, 1.8, -100 ]
           - [ -2.0, 0.0, 1.5, 180 ]
       lidar: # lidar sensor configuration, check CARLA sensor reference for more details
-        visualize: true
+        visualize: false
 
     localization: &base_localize
       activate: false # when not activated, ego position will be retrieved from server directly
@@ -102,81 +100,75 @@ vehicle_base:
     overtake_allowed: false # whether overtake allowed, typically false for platoon leader
     collision_time_ahead: 1.1 # used for collision checking
 
-platoon_base:
-  max_capacity: 10
-  inter_gap: 0.2 # desired time gap
-  open_gap: 1.0 # open gap
-  warm_up_speed: 30 # required speed before cooperative merging
-
 
 scenario:
   background_traffic:
     vehicle_num: 0
-  single_cav_list: # this is for merging vehicle or single cav without v2x
-#    - name: cav1
-#      spawn_position: [-313, 34, 0.3, 0, 0, 0]
-#      destination: [340, 34, 0]
-#      sensing:
-#        perception:
-#          activate: false
-#          camera:
-#            visualize: 0 # how many camera images need to be visualized. 0 means no visualization for camera
-#            num: 4 # how many cameras are mounted on the vehicle. Maximum 3(frontal, left and right cameras)
-#            # relative positions (x,y,z,yaw) of the camera. len(positions) should be equal to camera num
-#            positions:
-#              - [2.5, 0, 1.0, 0]
-#              - [0.0, 0.3, 1.8, 100]
-#              - [0.0, -0.3, 1.8, -100]
-#              - [-2.0, 0.0, 1.5, 180]
-#          lidar: # lidar sensor configuration, check CARLA sensor reference for more details
-#            visualize: false
-#      v2x:
-#        communication_range: 35
-#        ms-van3t: true
-#      behavior:
-#        <<: *base_behavior
-#        max_speed: 70 # maximum speed, km/h
-#        tailgate_speed: 111
-#        overtake_allowed: false
-#        local_planner:
-#          debug_trajectory: true
-#          debug: false
-#
-#    - name: cav2
-#      spawn_position: [-323, 34, 0.3, 0, 0, 0]
-#      destination: [340, 34, 0]
-#      sensing:
-#        perception:
-#          activate: false
-#          camera:
-#            visualize: 0 # how many camera images need to be visualized. 0 means no visualization for camera
-#            num: 4 # how many cameras are mounted on the vehicle. Maximum 3(frontal, left and right cameras)
-#            # relative positions (x,y,z,yaw) of the camera. len(positions) should be equal to camera num
-#            positions:
-#              - [2.5, 0, 1.0, 0]
-#              - [0.0, 0.3, 1.8, 100]
-#              - [0.0, -0.3, 1.8, -100]
-#              - [-2.0, 0.0, 1.5, 180]
-#          lidar: # lidar sensor configuration, check CARLA sensor reference for more details
-#            visualize: false
-#      v2x:
-#        communication_range: 35
-#        ms-van3t: true
-#      behavior:
-#        <<: *base_behavior
-#        max_speed: 100 # maximum speed, km/h
-#        tailgate_speed: 111
-#        overtake_allowed: true
-#        local_planner:
-#          debug_trajectory: true
-#          debug: false
-
-    - name: cav3
-      spawn_position: [-333, 34, 0.3, 0, 0, 0]
-      destination: [340, 34, 0]
+  single_cav_list:
+    - name: cav1
+      spawn_position: [600, 13, 0.3, 0, 0, 0]
+      destination: [1100.372955, 13, 0.3]
       sensing:
         perception:
-          activate: false
+          activate: true
+          camera:
+            visualize: 0 # how many camera images need to be visualized. 0 means no visualization for camera
+            num: 4 # how many cameras are mounted on the vehicle. Maximum 3(frontal, left and right cameras)
+            # relative positions (x,y,z,yaw) of the camera. len(positions) should be equal to camera num
+            positions:
+              - [2.5, 0, 1.0, 0]
+              - [0.0, 0.3, 1.8, 100]
+              - [0.0, -0.3, 1.8, -100]
+              - [-2.0, 0.0, 1.5, 180]
+          lidar: # lidar sensor configuration, check CARLA sensor reference for more details
+            visualize: false
+      v2x:
+        communication_range: 35
+        ms-van3t: true
+      behavior:
+        <<: *base_behavior
+        max_speed: 70 # maximum speed, km/h
+        tailgate_speed: 111
+        overtake_allowed: false
+        local_planner:
+          debug_trajectory: true
+          debug: false
+
+    - name: cav2
+      spawn_position: [590, 13, 0.3, 0, 0, 0]
+      destination: [1100.372955, 13, 0.3]
+      sensing:
+        perception:
+          activate: true
+          camera:
+            visualize: 0 # how many camera images need to be visualized. 0 means no visualization for camera
+            num: 4 # how many cameras are mounted on the vehicle. Maximum 3(frontal, left and right cameras)
+            # relative positions (x,y,z,yaw) of the camera. len(positions) should be equal to camera num
+            positions:
+              - [2.5, 0, 1.0, 0]
+              - [0.0, 0.3, 1.8, 100]
+              - [0.0, -0.3, 1.8, -100]
+              - [-2.0, 0.0, 1.5, 180]
+          lidar: # lidar sensor configuration, check CARLA sensor reference for more details
+            visualize: false
+      v2x:
+        communication_range: 35
+        ms-van3t: true
+      behavior:
+        <<: *base_behavior
+        max_speed: 100 # maximum speed, km/h
+        tailgate_speed: 111
+        overtake_allowed: true
+        local_planner:
+          debug_trajectory: true
+          debug: false
+
+    - name: cav3
+      spawn_position: [580, 13, 0.3, 0, 0, 0]
+      destination: [1100.372955, 13, 0.3]
+      sensing:
+        perception:
+          activate: true
           camera:
             visualize: 0 # how many camera images need to be visualized. 0 means no visualization for camera
             num: 4 # how many cameras are mounted on the vehicle. Maximum 3(frontal, left and right cameras)
@@ -201,11 +193,11 @@ scenario:
           debug: false
 
     - name: cav4
-      spawn_position: [-343, 34, 0.3, 0, 0, 0]
-      destination: [340, 34, 0]
+      spawn_position: [570, 13, 0.3, 0, 0, 0]
+      destination: [1100.372955, 13, 0.3]
       sensing:
         perception:
-          activate: false
+          activate: true
           camera:
             visualize: 0 # how many camera images need to be visualized. 0 means no visualization for camera
             num: 4 # how many cameras are mounted on the vehicle. Maximum 3(frontal, left and right cameras)
@@ -229,11 +221,11 @@ scenario:
           debug_trajectory: true
           debug: false
     - name: cav5
-      spawn_position: [-353, 34, 0.3, 0, 0, 0]
-      destination: [340, 34, 0]
+      spawn_position: [560, 13, 0.3, 0, 0, 0]
+      destination: [1100.372955, 13, 0.3]
       sensing:
         perception:
-          activate: false
+          activate: true
           camera:
             visualize: 0 # how many camera images need to be visualized. 0 means no visualization for camera
             num: 4 # how many cameras are mounted on the vehicle. Maximum 3(frontal, left and right cameras)
@@ -258,11 +250,11 @@ scenario:
           debug: false
 
     - name: cav6
-      spawn_position: [-363, 34, 0.3, 0, 0, 0]
-      destination: [340, 34, 0]
+      spawn_position: [550, 13, 0.3, 0, 0, 0]
+      destination: [1100.372955, 13, 0.3]
       sensing:
         perception:
-          activate: false
+          activate: true
           camera:
             visualize: 0 # how many camera images need to be visualized. 0 means no visualization for camera
             num: 4 # how many cameras are mounted on the vehicle. Maximum 3(frontal, left and right cameras)
@@ -287,11 +279,11 @@ scenario:
           debug: false
 
     - name: cav7
-      spawn_position: [-373, 34, 0.3, 0, 0, 0]
-      destination: [340, 34, 0]
+      spawn_position: [540, 13, 0.3, 0, 0, 0]
+      destination: [1100.372955, 13, 0.3]
       sensing:
         perception:
-          activate: false
+          activate: true
           camera:
             visualize: 0 # how many camera images need to be visualized. 0 means no visualization for camera
             num: 4 # how many cameras are mounted on the vehicle. Maximum 3(frontal, left and right cameras)
@@ -316,11 +308,11 @@ scenario:
           debug: false
 
     - name: cav8
-      spawn_position: [-383, 34, 0.3, 0, 0, 0]
-      destination: [340, 34, 0]
+      spawn_position: [530, 13, 0.3, 0, 0, 0]
+      destination: [1100.372955, 13, 0.3]
       sensing:
         perception:
-          activate: false
+          activate: true
           camera:
             visualize: 0 # how many camera images need to be visualized. 0 means no visualization for camera
             num: 4 # how many cameras are mounted on the vehicle. Maximum 3(frontal, left and right cameras)
@@ -345,11 +337,11 @@ scenario:
           debug: false
 
     - name: cav9
-      spawn_position: [-393, 34, 0.3, 0, 0, 0]
-      destination: [340, 34, 0]
+      spawn_position: [520, 13, 0.3, 0, 0, 0]
+      destination: [1100.372955, 13, 0.3]
       sensing:
         perception:
-          activate: false
+          activate: true
           camera:
             visualize: 0 # how many camera images need to be visualized. 0 means no visualization for camera
             num: 4 # how many cameras are mounted on the vehicle. Maximum 3(frontal, left and right cameras)
@@ -374,11 +366,11 @@ scenario:
           debug: false
 
     - name: cav10
-      spawn_position: [-403, 34, 0.3, 0, 0, 0]
-      destination: [340, 34, 0]
+      spawn_position: [510, 13, 0.3, 0, 0, 0]
+      destination: [1100.372955, 13, 0.3]
       sensing:
         perception:
-          activate: false
+          activate: true
           camera:
             visualize: 0 # how many camera images need to be visualized. 0 means no visualization for camera
             num: 4 # how many cameras are mounted on the vehicle. Maximum 3(frontal, left and right cameras)
@@ -403,8 +395,40 @@ scenario:
           debug: false
 
     - name: cav11
-      spawn_position: [-413, 34, 0.3, 0, 0, 0]
-      destination: [340, 34, 0]
+      spawn_position: [500, 13, 0.3, 0, 0, 0]
+      destination: [1100.372955, 13, 0.3]
+      sensing:
+        perception:
+          activate: true
+          camera:
+            visualize: 0 # how many camera images need to be visualized. 0 means no visualization for camera
+            num: 4 # how many cameras are mounted on the vehicle. Maximum 3(frontal, left and right cameras)
+            # relative positions (x,y,z,yaw) of the camera. len(positions) should be equal to camera num
+            positions:
+              - [2.5, 0, 1.0, 0]
+              - [0.0, 0.3, 1.8, 100]
+              - [0.0, -0.3, 1.8, -100]
+              - [-2.0, 0.0, 1.5, 180]
+          lidar: # lidar sensor configuration, check CARLA sensor reference for more details
+            visualize: false
+      v2x:
+        communication_range: 35
+        ms-van3t: true
+      behavior:
+        <<: *base_behavior
+        max_speed: 100 # maximum speed, km/h
+        tailgate_speed: 111
+        overtake_allowed: true
+        local_planner:
+          debug_trajectory: true
+          debug: false
+
+    - name: intruder
+      spawn_position: [-380, 4.8, 0.3, 0, 0, 0]
+      # when this is defined, the above parameter will be ignored, and a special map function will
+      # be used to define the spawn position based on the argument
+      spawn_special: [0.55]
+      destination: [300, 12.0, 0]
       sensing:
         perception:
           activate: false
@@ -422,6 +446,7 @@ scenario:
       v2x:
         communication_range: 35
         ms-van3t: true
+        intruder: true
       behavior:
         <<: *base_behavior
         max_speed: 100 # maximum speed, km/h
