--- a/opencda/scenario_testing/config_yaml/ms_van3t_platooning_2lane_intruder.yaml
+++ b/opencda/scenario_testing/config_yaml/ms_van3t_platooning_2lane_intruder.yaml
@@ -1,73 +1,50 @@
-#carla_traffic_manager:
-#  global_distance: 4.0
-#  global_speed_perc: -50
-#  ignore_lights_percentage: 0
-#  vehicle_list:
-#  - spawn_position:
-#    - -403
-#    - 30
-#    - 0.3
-#    - 0
-#    - 0
-#    - 0
-#    vehicle_speed_perc: -200
-#  - spawn_position:
-#    - -417
-#    - 30
-#    - 0.3
-#    - 0
-#    - 0
-#    - 0
-#    vehicle_speed_perc: -200
-#  - spawn_position:
-#    - -380
-#    - 30
-#    - 0.3
-#    - 0
-#    - 0
-#    - 0
-#    vehicle_speed_perc: -200
-#  - spawn_position:
-#    - -365
-#    - 30
-#    - 0.3
-#    - 0
-#    - 0
-#    - 0
-#    vehicle_speed_perc: -200
-#  - spawn_position:
-#    - -350
-#    - 30
-#    - 0.3
-#    - 0
-#    - 0
-#    - 0
-#    vehicle_speed_perc: -200
-#  - spawn_position:
-#    - -380
-#    - 34
-#    - 0.3
-#    - 0
-#    - 0
-#    - 0
-#    vehicle_speed_perc: -200
-#  - spawn_position:
-#    - -350
-#    - 34
-#    - 0.3
-#    - 0
-#    - 0
-#    - 0
-#    vehicle_speed_perc: -200
-#  - spawn_position:
-#    - -400
-#    - 27
-#    - 0.3
-#    - 0
-#    - 0
-#    - 0
-#    vehicle_speed_perc: -200
 
+carla_traffic_manager:
+  global_distance: 10.0 # the minimum distance in meters that vehicles have to keep with the rest
+  global_speed_perc: -200
+  vehicle_list:
+    - spawn_position: [ -560.4, 4.8, 0.3, 0, 0, 0 ]
+    - spawn_position: [ -570.3, 4.3, 0.3, 0, 0, 0 ]
+    - spawn_position: [ -580.8, 4.8, 0.3, 0, 0, 0 ]
+    - spawn_position: [ -590.9, 4.8, 0.3, 0, 0, 0 ]
+    - spawn_position: [ -600.6, 4.3, 0.3, 0, 0, 0 ]
+    - spawn_position: [ -610.1, 4.8, 0.3, 0, 0, 0 ]
+    - spawn_position: [ -620.3, 4.8, 0.3, 0, 0, 0 ]
+    - spawn_position: [ -630.2, 4.3, 0.3, 0, 0, 0 ]
+    - spawn_position: [ -640.3, 4.8, 0.3, 0, 0, 0 ]
+    - spawn_position: [-780.4, 4.8, 0.3, 0, 0, 0]
+    - spawn_position: [-762.3, 8.3, 0.3, 0, 0, 0]
+    - spawn_position: [-963.8, 4.8, 0.3, 0, 0, 0]
+    - spawn_position: [-883.9, 4.8, 0.3, 0, 0, 0]
+    - spawn_position: [-924.6, 8.3, 0.3, 0, 0, 0]
+    - spawn_position: [-917.1, 4.8, 0.3, 0, 0, 0]
+    - spawn_position: [-928.3, 4.8, 0.3, 0, 0, 0]
+    - spawn_position: [-975.2, 8.3, 0.3, 0, 0, 0]
+    - spawn_position: [-696.3, 4.8, 0.3, 0, 0, 0]
+    - spawn_position: [-662.4, 8.3, 0.3, 0, 0, 0]
+    - spawn_position: [-838.1, 4.8, 0.3, 0, 0, 0]
+    - spawn_position: [-850.8, 4.8, 0.3, 0, 0, 0]
+    - spawn_position: [-994.3, 8.3, 0.3, 0, 0, 0]
+    - spawn_position: [-792.5, 4.8, 0.3, 0, 0, 0]
+    - spawn_position: [-814.3, 4.8, 0.3, 0, 0, 0]
+    - spawn_position: [-860.6, 8.3, 0.3, 0, 0, 0]
+    - spawn_position: [-864.4, 4.8, 0.3, 0, 0, 0]
+    - spawn_position: [-1019.2, 4.8, 0.3, 0, 0, 0]
+    - spawn_position: [-774.9, 8.3, 0.3, 0, 0, 0]
+    - spawn_position: [-743.7, 8.3, 0.3, 0, 0, 0]
+    - spawn_position: [-953.2, 8.3, 0.3, 0, 0, 0]
+    - spawn_position: [-725.9, 4.8, 0.3, 0, 0, 0]
+    - spawn_position: [-987.1, 4.8, 0.3, 0, 0, 0]
+    - spawn_position: [-830.4, 8.3, 0.3, 0, 0, 0]
+    - spawn_position: [-765.2, 4.8, 0.3, 0, 0, 0]
+    - spawn_position: [-1018.3, 8.3, 0.3, 0, 0, 0]
+    - spawn_position: [-676.0, 8.3, 0.3, 0, 0, 0]
+    - spawn_position: [-827.6, 4.8, 0.3, 0, 0, 0]
+    - spawn_position: [-721.5, 8.3, 0.3, 0, 0, 0]
+    - spawn_position: [-897.1, 4.8, 0.3, 0, 0, 0]
+
+
+# First define the basic parameters of the vehicles
 vehicle_base:
   sensing:
     perception:
@@ -82,7 +59,7 @@ vehicle_base:
           - [ 0.0, -0.3, 1.8, -100 ]
           - [ -2.0, 0.0, 1.5, 180 ]
       lidar: # lidar sensor configuration, check CARLA sensor reference for more details
-        visualize: true
+        visualize: false
 
     localization: &base_localize
       activate: false # when not activated, ego position will be retrieved from server directly
@@ -102,81 +79,75 @@ vehicle_base:
     overtake_allowed: false # whether overtake allowed, typically false for platoon leader
     collision_time_ahead: 1.1 # used for collision checking
 
-platoon_base:
-  max_capacity: 10
-  inter_gap: 0.2 # desired time gap
-  open_gap: 1.0 # open gap
-  warm_up_speed: 30 # required speed before cooperative merging
-
 
 scenario:
   background_traffic:
     vehicle_num: 0
-  single_cav_list: # this is for merging vehicle or single cav without v2x
-#    - name: cav1
-#      spawn_position: [-313, 34, 0.3, 0, 0, 0]
-#      destination: [340, 34, 0]
-#      sensing:
-#        perception:
-#          activate: false
-#          camera:
-#            visualize: 0 # how many camera images need to be visualized. 0 means no visualization for camera
-#            num: 4 # how many cameras are mounted on the vehicle. Maximum 3(frontal, left and right cameras)
-#            # relative positions (x,y,z,yaw) of the camera. len(positions) should be equal to camera num
-#            positions:
-#              - [2.5, 0, 1.0, 0]
-#              - [0.0, 0.3, 1.8, 100]
-#              - [0.0, -0.3, 1.8, -100]
-#              - [-2.0, 0.0, 1.5, 180]
-#          lidar: # lidar sensor configuration, check CARLA sensor reference for more details
-#            visualize: false
-#      v2x:
-#        communication_range: 35
-#        ms-van3t: true
-#      behavior:
-#        <<: *base_behavior
-#        max_speed: 70 # maximum speed, km/h
-#        tailgate_speed: 111
-#        overtake_allowed: false
-#        local_planner:
-#          debug_trajectory: true
-#          debug: false
-#
-#    - name: cav2
-#      spawn_position: [-323, 34, 0.3, 0, 0, 0]
-#      destination: [340, 34, 0]
-#      sensing:
-#        perception:
-#          activate: false
-#          camera:
-#            visualize: 0 # how many camera images need to be visualized. 0 means no visualization for camera
-#            num: 4 # how many cameras are mounted on the vehicle. Maximum 3(frontal, left and right cameras)
-#            # relative positions (x,y,z,yaw) of the camera. len(positions) should be equal to camera num
-#            positions:
-#              - [2.5, 0, 1.0, 0]
-#              - [0.0, 0.3, 1.8, 100]
-#              - [0.0, -0.3, 1.8, -100]
-#              - [-2.0, 0.0, 1.5, 180]
-#          lidar: # lidar sensor configuration, check CARLA sensor reference for more details
-#            visualize: false
-#      v2x:
-#        communication_range: 35
-#        ms-van3t: true
-#      behavior:
-#        <<: *base_behavior
-#        max_speed: 100 # maximum speed, km/h
-#        tailgate_speed: 111
-#        overtake_allowed: true
-#        local_planner:
-#          debug_trajectory: true
-#          debug: false
-
-    - name: cav3
-      spawn_position: [-333, 34, 0.3, 0, 0, 0]
-      destination: [340, 34, 0]
+  single_cav_list:
+    - name: cav1
+      spawn_position: [-540.722836, 8.3, 0.3, 0, 0, 0]
+      destination: [1100.372955, 8.3, 0.3]
       sensing:
         perception:
-          activate: false
+          activate: true
+          camera:
+            visualize: 0 # how many camera images need to be visualized. 0 means no visualization for camera
+            num: 4 # how many cameras are mounted on the vehicle. Maximum 3(frontal, left and right cameras)
+            # relative positions (x,y,z,yaw) of the camera. len(positions) should be equal to camera num
+            positions:
+              - [2.5, 0, 1.0, 0]
+              - [0.0, 0.3, 1.8, 100]
+              - [0.0, -0.3, 1.8, -100]
+              - [-2.0, 0.0, 1.5, 180]
+          lidar: # lidar sensor configuration, check CARLA sensor reference for more details
+            visualize: false
+      v2x:
+        communication_range: 35
+        ms-van3t: true
+      behavior:
+        <<: *base_behavior
+        max_speed: 70 # maximum speed, km/h
+        tailgate_speed: 111
+        overtake_allowed: false
+        local_planner:
+          debug_trajectory: true
+          debug: false
+
+    - name: cav2
+      spawn_position: [-550.722836, 8.3, 0.3, 0, 0, 0]
+      destination: [1100.372955, 8.3, 0.3]
+      sensing:
+        perception:
+          activate: true
+          camera:
+            visualize: 0 # how many camera images need to be visualized. 0 means no visualization for camera
+            num: 4 # how many cameras are mounted on the vehicle. Maximum 3(frontal, left and right cameras)
+            # relative positions (x,y,z,yaw) of the camera. len(positions) should be equal to camera num
+            positions:
+              - [2.5, 0, 1.0, 0]
+              - [0.0, 0.3, 1.8, 100]
+              - [0.0, -0.3, 1.8, -100]
+              - [-2.0, 0.0, 1.5, 180]
+          lidar: # lidar sensor configuration, check CARLA sensor reference for more details
+            visualize: false
+      v2x:
+        communication_range: 35
+        ms-van3t: true
+      behavior:
+        <<: *base_behavior
+        max_speed: 100 # maximum speed, km/h
+        tailgate_speed: 111
+        overtake_allowed: true
+        local_planner:
+          debug_trajectory: true
+          debug: false
+
+    - name: cav3
+      spawn_position: [-560.722836, 8.3, 0.3, 0, 0, 0]
+      destination: [1100.372955, 8.3, 0.3]
+      sensing:
+        perception:
+          activate: true
           camera:
             visualize: 0 # how many camera images need to be visualized. 0 means no visualization for camera
             num: 4 # how many cameras are mounted on the vehicle. Maximum 3(frontal, left and right cameras)
@@ -201,11 +172,11 @@ scenario:
           debug: false
 
     - name: cav4
-      spawn_position: [-343, 34, 0.3, 0, 0, 0]
-      destination: [340, 34, 0]
+      spawn_position: [-570.722836, 8.3, 0.3, 0, 0, 0]
+      destination: [1100.372955, 8.3, 0.3]
       sensing:
         perception:
-          activate: false
+          activate: true
           camera:
             visualize: 0 # how many camera images need to be visualized. 0 means no visualization for camera
             num: 4 # how many cameras are mounted on the vehicle. Maximum 3(frontal, left and right cameras)
@@ -229,11 +200,11 @@ scenario:
           debug_trajectory: true
           debug: false
     - name: cav5
-      spawn_position: [-353, 34, 0.3, 0, 0, 0]
-      destination: [340, 34, 0]
+      spawn_position: [-580.722836, 8.3, 0.3, 0, 0, 0]
+      destination: [1100.372955, 8.3, 0.3]
       sensing:
         perception:
-          activate: false
+          activate: true
           camera:
             visualize: 0 # how many camera images need to be visualized. 0 means no visualization for camera
             num: 4 # how many cameras are mounted on the vehicle. Maximum 3(frontal, left and right cameras)
@@ -258,11 +229,11 @@ scenario:
           debug: false
 
     - name: cav6
-      spawn_position: [-363, 34, 0.3, 0, 0, 0]
-      destination: [340, 34, 0]
+      spawn_position: [-590.722836, 8.3, 0.3, 0, 0, 0]
+      destination: [1100.372955, 8.3, 0.3]
       sensing:
         perception:
-          activate: false
+          activate: true
           camera:
             visualize: 0 # how many camera images need to be visualized. 0 means no visualization for camera
             num: 4 # how many cameras are mounted on the vehicle. Maximum 3(frontal, left and right cameras)
@@ -287,11 +258,11 @@ scenario:
           debug: false
 
     - name: cav7
-      spawn_position: [-373, 34, 0.3, 0, 0, 0]
-      destination: [340, 34, 0]
+      spawn_position: [-600.722836, 8.3, 0.3, 0, 0, 0]
+      destination: [1100.372955, 8.3, 0.3]
       sensing:
         perception:
-          activate: false
+          activate: true
           camera:
             visualize: 0 # how many camera images need to be visualized. 0 means no visualization for camera
             num: 4 # how many cameras are mounted on the vehicle. Maximum 3(frontal, left and right cameras)
@@ -316,11 +287,11 @@ scenario:
           debug: false
 
     - name: cav8
-      spawn_position: [-383, 34, 0.3, 0, 0, 0]
-      destination: [340, 34, 0]
+      spawn_position: [-610.722836, 8.3, 0.3, 0, 0, 0]
+      destination: [1100.372955, 8.3, 0.3]
       sensing:
         perception:
-          activate: false
+          activate: true
           camera:
             visualize: 0 # how many camera images need to be visualized. 0 means no visualization for camera
             num: 4 # how many cameras are mounted on the vehicle. Maximum 3(frontal, left and right cameras)
@@ -345,11 +316,11 @@ scenario:
           debug: false
 
     - name: cav9
-      spawn_position: [-393, 34, 0.3, 0, 0, 0]
-      destination: [340, 34, 0]
+      spawn_position: [-620.722836, 8.3, 0.3, 0, 0, 0]
+      destination: [1100.372955, 8.3, 0.3]
       sensing:
         perception:
-          activate: false
+          activate: true
           camera:
             visualize: 0 # how many camera images need to be visualized. 0 means no visualization for camera
             num: 4 # how many cameras are mounted on the vehicle. Maximum 3(frontal, left and right cameras)
@@ -374,11 +345,11 @@ scenario:
           debug: false
 
     - name: cav10
-      spawn_position: [-403, 34, 0.3, 0, 0, 0]
-      destination: [340, 34, 0]
+      spawn_position: [-630.722836, 8.3, 0.3, 0, 0, 0]
+      destination: [1100.372955, 8.3, 0.3]
       sensing:
         perception:
-          activate: false
+          activate: true
           camera:
             visualize: 0 # how many camera images need to be visualized. 0 means no visualization for camera
             num: 4 # how many cameras are mounted on the vehicle. Maximum 3(frontal, left and right cameras)
@@ -403,8 +374,40 @@ scenario:
           debug: false
 
     - name: cav11
-      spawn_position: [-413, 34, 0.3, 0, 0, 0]
-      destination: [340, 34, 0]
+      spawn_position: [-640.722836, 8.3, 0.3, 0, 0, 0]
+      destination: [1100.372955, 8.3, 0.3]
+      sensing:
+        perception:
+          activate: true
+          camera:
+            visualize: 0 # how many camera images need to be visualized. 0 means no visualization for camera
+            num: 4 # how many cameras are mounted on the vehicle. Maximum 3(frontal, left and right cameras)
+            # relative positions (x,y,z,yaw) of the camera. len(positions) should be equal to camera num
+            positions:
+              - [2.5, 0, 1.0, 0]
+              - [0.0, 0.3, 1.8, 100]
+              - [0.0, -0.3, 1.8, -100]
+              - [-2.0, 0.0, 1.5, 180]
+          lidar: # lidar sensor configuration, check CARLA sensor reference for more details
+            visualize: false
+      v2x:
+        communication_range: 35
+        ms-van3t: true
+      behavior:
+        <<: *base_behavior
+        max_speed: 100 # maximum speed, km/h
+        tailgate_speed: 111
+        overtake_allowed: true
+        local_planner:
+          debug_trajectory: true
+          debug: false
+
+    - name: intruder
+      spawn_position: [-380, 4.8, 0.3, 0, 0, 0]
+      # when this is defined, the above parameter will be ignored, and a special map function will
+      # be used to define the spawn position based on the argument
+      spawn_special: [0.55]
+      destination: [300, 12.0, 0]
       sensing:
         perception:
           activate: false
@@ -422,6 +425,7 @@ scenario:
       v2x:
         communication_range: 35
         ms-van3t: true
+        intruder: true
       behavior:
         <<: *base_behavior
         max_speed: 100 # maximum speed, km/h
